4-NAT.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "nat"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public-eu-central-1a.id #change to your AZ

  tags = {
    Name = "nat"
  }


  depends_on = [aws_internet_gateway.igw]
}
